@@ -1,3 +1,10 @@
+2001-11-16  Kevin Vandersloot <kfv101@psu.edu>
+
+	* favorites.c: make the treeview update instead of clearing the whole
+	list. Also when a process is hidden update the treeview
+
+	* procdialogs.c: some UI imporovements from stable
+
 2001-11-15  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: select the next process if the selected process
